<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvLable"
        style="@style/fontStyleBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/permission_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"></TextView>


    <TextView
        android:id="@+id/tvMessage"
        style="@style/fontStyleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLable"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:gravity="top|center"
        android:padding="@dimen/_10sdp"
        android:text="@string/alert_request_Permission"
        android:textSize="@dimen/_12sdp" />


    <Button
        android:id="@+id/btSettings"
        style="@style/fontStyleBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/tvMessage"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/deep_sky_blue"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />
</RelativeLayout>