<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/fontStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/fontStyleBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutemail"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                style="@style/fontStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/fontStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                style="@style/fontStyleBold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />


        </RelativeLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

</RelativeLayout>
